# gpu_20days

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
.github/workflows/: kernel-test.yml  pr-size-labeler.yml  pre-commit.yml
csrc/: CMakeLists.txt  bindings.cu  day01_printAdd.cu  day11_softmax.cu  day12_layernorm.cu  day13_rmsnorm.cu  day14_fused_softmax.cu  day15_fused_attention.cu  day16_group_gemm.cu  day17_persistent_matmul.cu  day18_block_scaled_matmul.cu  day19_rope.cu  day20_conv2d.cu
day02/: function.cu
day04/: matmul.cu
day05/: MatrixAddition.cu
day06/: CountArrayElement.cu  MatrixAddition.py  VectorAddition.py  function.py  matmul.py  printAdd.py
day09/: SiLU.cu  SiLU.py
day10/: Conv1D.cu  Conv1D.py
src/gpu_20days/: __init__.py  cuda_kernels.py  day11_softmax.py  day12_layernorm.py  day13_rmsnorm.py  day14_fused_softmax.py  day15_fused_attention.py  day16_group_gemm.py  day17_persistent_matmul.py  day18_block_scaled_matmul.py  day19_rope.py  day20_conv2d.py
tests/: test_day01.py  test_day02.py  test_day03.py  test_day04.py  test_day05.py  test_day06.py  test_day07.py  test_day08.py  test_day09.py  test_day10.py  test_day11.py  test_day12.py  test_day13.py  test_day14.py  test_day15.py  test_day16.py  test_day17.py  test_day18.py  test_day19.py  test_day20.py
